//
// Copyright 2022 DXOS.org
//

syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "dxos/keys.proto";

package dxos.mesh.teleport.gossip;

message GossipMessage {
  dxos.keys.PublicKey peer_id = 1;
  /// Peer tracks what had been sent by message id.
  dxos.keys.PublicKey message_id = 2;
  google.protobuf.Timestamp timestamp = 3;

  google.protobuf.Any payload = 10;
}

service GossipService {
  rpc Announce(GossipMessage) returns (google.protobuf.Empty);
}
